# file-operations

./: .gitignore  CMakeLists.txt
misc/test/: CMakeLists.txt  test.cpp
src/: FileOperations.cpp  FileOperations.h
